--- a/TheBeast/app/src/main/res/values/strings.xml
+++ b/TheBeast/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="user_name">Please sign in for fun!</string>
     <string name="sign_in_with_facebook_header">Sign in with Facebook!</string>
     <string name="main_activity_header">Welcome to the Beast!</string>
+
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
