--- a/TheBeast/app/src/main/res/values/strings.xml
+++ b/TheBeast/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">544407449082473</string>
     <string name="go_to_fb_login">Login with Facebook!</string>
+    <string name="go_to_maps_activity">View Map to Find a Game!</string>
     <string name="title_activity_login_to_facebook">LoginToFacebook</string>
     <string name="user_name">Please sign in for fun!</string>
     <string name="sign_in_with_facebook_header">Sign in with Facebook!</string>
@@ -23,4 +24,18 @@
     <string name="action_example">Example action</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_activity_tab_fragment">TabFragment</string>
+
+    <string name="title_activity_maps">Map</string>
+    <string name="about">About…</string>
+    <string name="get_location">Get Current Location</string>
+    <string name="show_location">Show Current Location</string>
+    <string name="about_app">About Where Am I?</string>
+    <string name="close">Close</string>
+    <string name="code_credit">© 2014 Adam C. Champion</string>
+    <string name="prefs">Prefs</string>
+    <string name="eula_accepted_key">eula_accepted</string>
+    <string name="eula"><p>By using this app, you agree to abide by the <a href="https://developers.google.com/maps/terms">Google Maps Terms of Service</a> and <a href="https://www.google.com/intl/en/policies/terms/">Google\'s Terms of Service</a>.</p><p><strong>Privacy Policy:</strong> Upon request, this app uses your location in order to show it via Google Maps. Internet access permission is necessary for this purpose. No other information is collected, stored, or transmitted.</p></string>
+    <string name="accept">Accept</string>
+    <string name="decline">Decline</string>
+    <string name="google_play_text_key">google_play_text</string>
 </resources>
