--- a/TheBeast/app/src/main/res/values/strings.xml
+++ b/TheBeast/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="decline">Decline</string>
     <string name="google_play_text_key">google_play_text</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_create_game">CreateGameActivity</string>
 </resources>
