Add empty class and testing layout for viewing details of a game

--- a/TheBeast/app/src/main/res/values/strings.xml
+++ b/TheBeast/app/src/main/res/values/strings.xml
@@ -55,4 +55,10 @@
     <string name="team_size_picker_title">Team size</string>
     <string name="create_button_text">CREATE</string>
 
+    <string name="info_label">Additional Info: </string>
+    <string name="location_label">Location: </string>
+    <string name="sport_label">Sport: </string>
+    <string name="team_size_label">Team Size: </string>
+    <string name="time_label">Time: </string>
+
 </resources>
