--- a/TheBeast/app/src/main/res/values/strings.xml
+++ b/TheBeast/app/src/main/res/values/strings.xml
@@ -55,11 +55,14 @@
     <string name="button_text">EDIT</string>
     <string name="team_size_picker_title">Team size</string>
     <string name="create_button_text">CREATE</string>
+    <string name="title_activity_map_viewer">MapViewerActivity</string>
 
     <string name="info_label">Additional Info: </string>
     <string name="location_label">Location: </string>
     <string name="sport_label">Sport: </string>
     <string name="team_size_label">Team Size: </string>
     <string name="time_label">Time: </string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_view_game">ViewGameActivity</string>
 
 </resources>
