--- a/TheBeast/app/src/main/res/values/strings.xml
+++ b/TheBeast/app/src/main/res/values/strings.xml
@@ -65,8 +65,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_view_game">ViewGameActivity</string>
 
-    <string name="total_games_played">Total games played: </string>
-    <string name="overall_record">Overall record: </string>
+    <string name="total_games_played">Total games played</string>
+    <string name="overall_record">Overall record</string>
     <string name="games_played">Games played: </string>
     <string name="record">Record: </string>
     <string name="goals">Goals: </string>
